lesson23/diagnostics.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostics
  namespace: dev
spec:
  serviceAccountName: diagnostics-sa
  containers:
    - name: diagnostics
      image: bitnami/kubectl:latest
      command:
        - /bin/sh
        - -c
        - |
          echo "=== get wordpress ==="
          kubectl get pods -n dev -l app=wordpress -o wide
          echo "=== get all pods ==="
          kubectl get pods -n dev -o wide
          echo "=== complete ==="
          sleep infinity
