lesson23/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-single-pod
  namespace: dev                    
spec:
  podSelector:
    matchLabels:
      app: mysql                  
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress    
      ports:
        - protocol: TCP
          port: 3306
